[package]
name = "sgxs-loaders"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
Platform-specific loaders for SGX enclaves.

The following loaders are supported:
* isgx device (Linux)
* libsgx_enclave_common (Linux)
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/sgxs_loaders/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "enclave", "sgxs", "isgx"]
categories = ["os", "hardware-support", "api-bindings"]

[dependencies]
# Project dependencies
"sgxs" = { version = "0.6.0", path = "../sgxs" }
"sgx-isa" = { version = "0.3.0", path = "../sgx-isa" }

# External dependencies
bitflags = "1"           # MIT/Apache-2.0
nix = "0.11"             # MIT
libc = "0.2"             # MIT/Apache-2.0
failure = "0.1.1"        # MIT/Apache-2.0
failure_derive = "0.1.1" # MIT/Apache-2.0
libloading = "0.5"       # ISC
