[package]
name = "sgxs-loaders"
version = "0.3.3"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
edition = "2018"
description = """
Platform-specific loaders for SGX enclaves.

The following loaders are supported:
* SGX device (Linux)
* Enclave API (Windows)
* libsgx_enclave_common (Linux & Windows)
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/sgxs_loaders/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "enclave", "sgxs", "isgx"]
categories = ["os", "hardware-support", "api-bindings"]

[features]
# This feature isn't used in the public API of this crate. It's used only to
# disable testing the sgx_enclave_common loader
no_sgx_enclave_common = []

[dependencies]
# Project dependencies
"sgxs" = { version = "0.7.0", path = "../sgxs" }
"sgx-isa" = { version = "0.3.0", path = "../sgx-isa" }

# External dependencies
bitflags = "1"           # MIT/Apache-2.0
nix = "0.15"             # MIT
libc = "0.2"             # MIT/Apache-2.0
failure = "0.1.1"        # MIT/Apache-2.0
failure_derive = "0.1.1" # MIT/Apache-2.0
libloading = "0.5"       # ISC

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["enclaveapi","memoryapi","processthreadsapi"] }

[dev-dependencies]
# Project dependencies
"report-test" = { version = "0.3.0", path = "../report-test" }
"aesm-client" = { version = "0.5.0", path = "../aesm-client", features = ["sgxs"] }
