[package]
name = "sgxs"
version = "0.7.2"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
Library for working with the SGX stream format.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/sgxs/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "enclave", "sgxs"]
categories = ["parsing", "encoding"]

[dependencies]
# Project dependencies
sgx-isa = { version = "0.3.1", path = "../sgx-isa" }

# External dependencies
byteorder = "1.0"                                     # Unlicense/MIT
cty = "0.2.1"                                         # MIT/Apache-2.0
time = "0.1"                                          # MIT/Apache-2.0
failure = "0.1.1"                                     # MIT/Apache-2.0
failure_derive = "0.1.1"                              # MIT/Apache-2.0
openssl = { version = "0.10", optional = true }       # Apache-2.0
openssl-sys = { version = "0.9.24", optional = true } # Apache-2.0
foreign-types = { version = "0.3", optional = true }  # MIT/Apache-2.0
sha2 = { version = "0.8", optional = true }           # MIT OR Apache-2.0

[features]
crypto-openssl = ["openssl", "openssl-sys", "foreign-types"]

[dev-dependencies]
crypto-hash = "0.3" # MIT
